; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/crypto/extr_shash.c_shash_async_init.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/crypto/extr_shash.c_shash_async_init.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.ahash_request = type { %struct.TYPE_2__ }
%struct.TYPE_2__ = type { i32 }
%struct.crypto_shash = type { i32 }
%struct.shash_desc = type { i32, %struct.crypto_shash* }

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.ahash_request*)* @shash_async_init to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @shash_async_init(%struct.ahash_request* %0) #0 {
  %2 = alloca %struct.ahash_request*, align 8
  %3 = alloca %struct.crypto_shash**, align 8
  %4 = alloca %struct.shash_desc*, align 8
  store %struct.ahash_request* %0, %struct.ahash_request** %2, align 8
  %5 = load %struct.ahash_request*, %struct.ahash_request** %2, align 8
  %6 = call i32 @crypto_ahash_reqtfm(%struct.ahash_request* %5)
  %7 = call %struct.crypto_shash** @crypto_ahash_ctx(i32 %6)
  store %struct.crypto_shash** %7, %struct.crypto_shash*** %3, align 8
  %8 = load %struct.ahash_request*, %struct.ahash_request** %2, align 8
  %9 = call %struct.shash_desc* @ahash_request_ctx(%struct.ahash_request* %8)
  store %struct.shash_desc* %9, %struct.shash_desc** %4, align 8
  %10 = load %struct.crypto_shash**, %struct.crypto_shash*** %3, align 8
  %11 = load %struct.crypto_shash*, %struct.crypto_shash** %10, align 8
  %12 = load %struct.shash_desc*, %struct.shash_desc** %4, align 8
  %13 = getelementptr inbounds %struct.shash_desc, %struct.shash_desc* %12, i32 0, i32 1
  store %struct.crypto_shash* %11, %struct.crypto_shash** %13, align 8
  %14 = load %struct.ahash_request*, %struct.ahash_request** %2, align 8
  %15 = getelementptr inbounds %struct.ahash_request, %struct.ahash_request* %14, i32 0, i32 0
  %16 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %15, i32 0, i32 0
  %17 = load i32, i32* %16, align 4
  %18 = load %struct.shash_desc*, %struct.shash_desc** %4, align 8
  %19 = getelementptr inbounds %struct.shash_desc, %struct.shash_desc* %18, i32 0, i32 0
  store i32 %17, i32* %19, align 8
  %20 = load %struct.shash_desc*, %struct.shash_desc** %4, align 8
  %21 = call i32 @crypto_shash_init(%struct.shash_desc* %20)
  ret i32 %21
}

declare dso_local %struct.crypto_shash** @crypto_ahash_ctx(i32) #1

declare dso_local i32 @crypto_ahash_reqtfm(%struct.ahash_request*) #1

declare dso_local %struct.shash_desc* @ahash_request_ctx(%struct.ahash_request*) #1

declare dso_local i32 @crypto_shash_init(%struct.shash_desc*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
